Fixed some problems and added readme